tutorials/studying/part-4/networking/tcp/redis/redis-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: redis-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: tcp-redis
      number: 200
      protocol: TCP
    hosts:
    - '*'
