tutorials/studying/part-4/networking/tcp/redis/redis-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: redis-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - redis-gateway
  tcp:
  - match:
    - port: 200
    route:
    - destination:
        host: redis-service.storage.svc.cluster.local
        port:
          number: 6379
